Improve FeatureInstaller (#3049)
* Improve FeatureInstaller
* Remove unnecessary synchronized and clean up processing
* Re-add refeshing bundles after all configuratzion changes are processed
* Prevent unnecessary refreshes
* Make JNA part of the tp

Signed-off-by: Jan N. Klug <github@klug.nrw>